# bare-notcurses

./: .gitignore  CMakeLists.txt  README.md  binding.cc  example.js  index.js  package.json  test.js
examples/: basic.js  image.js
lib/: channels.js  constants.js  input-event.js  notcurses.js  plane.js  util.js  visual.js
